fixes uneveness with underline

--- a/client/styles/_buttons.sass
+++ b/client/styles/_buttons.sass
@@ -5,19 +5,25 @@
     display: flex
     justify-content: center
 .base-button-wrapper
+    background-color: yellow
+    padding: 0
+    width: 100%
     .base-button-content:after
         content: ""
         top: 65%
         height: 2px
         width: 0%
-        left: 5%
+        left: 0
         background-color: rgba(255, 255, 255, 0.6)
         transition: 0.3s ease-in all .01s
     &:hover .base-button-content:after
         color: blue
         background-color: blue
         content: ""
-        width: 90%
+        width: 100%
+        position: absolute
+        left: 300
+        top: -30
         transition: 0.3s ease-in all
     .base-button-content
         color: blue
